<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Image -->
        <ImageView
            tools:src="@drawable/code1"
            android:id="@+id/img_item_photo"
            android:layout_margin="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_160sdp"
            android:contentDescription="@string/languageimage"/>
        <!-- Title -->
        <TextView
            tools:text="test"
            android:id="@+id/tv_item_name"
            android:layout_margin="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="12dp"
            android:showDividers="middle">
            <!--            Table 1 Designed By -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                tools:ignore="UselessParent">
                <TextView
                    android:text="@string/designed_by"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_designed"
                    android:layout_marginStart="@dimen/_10sdp"
                    tools:text="item_designed"/>
            </TableRow>
            <!--            Table 2 Current Stable Version-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                tools:ignore="UselessParent">
                <TextView
                    android:text="@string/current_stable_version"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_version"
                    android:layout_marginStart="@dimen/_10sdp"
                    tools:text="item_version"/>
            </TableRow>
            <!--            Table 3 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                tools:ignore="UselessParent">
                <TextView
                    android:text="@string/first_release"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_released"
                    android:layout_marginStart="@dimen/_10sdp"
                    tools:text="item_released"/>
            </TableRow>
            <!--            Table 4 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                tools:ignore="UselessParent">
                <TextView
                    android:text="@string/name_extension"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_extension"
                    android:layout_marginStart="@dimen/_10sdp"
                    tools:text="item_extension"/>
            </TableRow>
            <!--            Table 5 -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_6sdp"
                tools:ignore="UselessParent">
                <TextView
                    android:text="@string/official_website"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/item_website"
                    android:autoLink="web"
                    android:clickable="true"
                    android:layout_marginStart="@dimen/_10sdp"
                    tools:text="item_website"
                    android:focusable="true" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:id="@+id/item_description"
            tools:text="item_description"/>

    </LinearLayout>
</ScrollView>